# git_conflict_env

./: .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  __init__.py  app.py  baseline_runner.py  git_conflict_env_environment.py  grader.py  phase2_validate.py  requirements.txt  task_loader.py
tasks/: easy.json  hard.json  medium.json
tests/: test_phase2_grader_harness.py
